--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -24,9 +24,7 @@ jobs:
 
       - name: Install Playwright Browsers
         run: |
-          playwright install
-          # If you only need Chromium, you can do playwright install chromium
-          # If you need all browsers: playwright install --with-deps
+          playwright install chromium
 
       - name: Configure ENV
         # Option 1: Write secrets to GITHUB_ENV so your Python code can read them via os.environ
