--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
   schedule:
-    - cron: "*/15 * * * *"
+    - cron: "0,15,30,45 * * * *"  # Runs every 15 minutes starting from the top of the hour
   workflow_dispatch:
 
 jobs:
@@ -34,7 +34,7 @@ jobs:
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> $GITHUB_ENV
           echo "DB_PORT=${{ secrets.DB_PORT }}" >> $GITHUB_ENV
           echo "DB_NAME=${{ secrets.DB_NAME }}" >> $GITHUB_ENV
-          echo "DB_NAME=${{ secrets.REVALIDATE_SECRET }}" >> $GITHUB_ENV
+          echo "REVALIDATE_SECRET=${{ secrets.REVALIDATE_SECRET }}" >> $GITHUB_ENV
 
       - name: Run the main script
         run: python -m scraper.main
