Fixed cURL request

--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -41,4 +41,5 @@ jobs:
 
       - name: Revalidate Next.js Page
         run: |
-          curl -X POST "https://er-watch.ca/api/revalidate?secret=${{ secrets.REVALIDATE_SECRET }}"
+          curl -v -L -X POST "https://er-watch.ca/api/revalidate?secret=${{ secrets.REVALIDATE_SECRET }}"
+
